--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "react-navigation": "^1.0.0-beta.21",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   }
 }
